--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vue/eslint-config-airbnb": "^7.0.1",
+    "axios": "^1.6.2",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "pinia": "^2.1.7",
+    "typescript-plugin-css-modules": "^5.0.2",
     "vue": "^3.3.11"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
+    "@rushstack/eslint-patch": "^1.6.1",
     "@tsconfig/node18": "^18.2.2",
+    "@types/css-modules": "^1.0.5",
     "@types/node": "^18.19.3",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
@@ -26,9 +31,12 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.0",
     "eslint": "^8.49.0",
+    "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
     "typescript": "~5.3.0",
     "vite": "^5.0.10",
     "vue-tsc": "^1.8.25"
