--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "pinia": "^2.1.7",
     "typescript-plugin-css-modules": "^5.0.2",
-    "vue": "^3.3.11"
+    "vue": "^3.3.11",
+    "@vitejs/plugin-vue": "^4.5.2",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "vite": "^5.0.10"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.6.1",
     "@tsconfig/node18": "^18.2.2",
     "@types/css-modules": "^1.0.5",
     "@types/node": "^18.19.3",
-    "@vitejs/plugin-vue": "^4.5.2",
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.0",
@@ -38,7 +39,6 @@
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "typescript": "~5.3.0",
-    "vite": "^5.0.10",
     "vue-tsc": "^1.8.25"
   }
 }
